- Have semi-fixed the sidebar on small screens, it now doesn't display the whitespace gap, but now on large screens it doesn't push the content symettrically

--- a/partials/_sidebar.scss
+++ b/partials/_sidebar.scss
@@ -26,7 +26,7 @@
     height: 100%; /* 100% Full-height */
     width: 350px; 
     position: fixed; /* Stay in place */
-    z-index: 10; /* Stay on top */
+    z-index: 1000; /* Stay on top */
     top: 0;
     right: -350px;  /* Changed with Javascript to show the sidebar */
     background-color: #333645; /* Black*/
